--- a/templates/login.html
+++ b/templates/login.html
@@ -27,7 +27,7 @@
                         <div class="mb-3">
                             <label for="password" class="form-label">Password</label>
                             <input type="password" class="form-control" id="password" name="password"
-                                placeholder="Enter password" required autofocus>
+                                placeholder="Enter password" autofocus>
                         </div>
 
                         <div class="d-grid">
